<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="graduation.plantcare.ui.auth.Login">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:paddingBottom="30dp"
        android:layout_marginTop="-10dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:letterSpacing="0.02"
        android:maxLines="1"
        android:text="@string/hi"
        android:gravity="start"
        android:textAlignment="viewStart"
        android:layoutDirection="locale"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/vertical50"
        app:layout_constraintStart_toStartOf="@+id/vertical5"
        app:layout_constraintTop_toTopOf="@+id/horizontal5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17010936" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:letterSpacing="0.02"
        android:maxLines="1"
        android:text="@string/please_login"
        android:textColor="#fff"
        android:layoutDirection="locale"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horizontal17"
        app:layout_constraintEnd_toStartOf="@+id/vertical50"
        app:layout_constraintStart_toStartOf="@+id/vertical5"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/loginErrorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:ellipsize="marquee"
        android:maxLines="2"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:paddingEnd="5dp"
        android:paddingBottom="8dp"
        android:text="@string/incorrect_email_or_password_try_again"
        android:textColor="@color/red"
        android:textDirection="locale"
        android:textSize="14sp"
        android:visibility="invisible"
        app:drawableStartCompat="@drawable/warning"
        app:layout_constraintBottom_toTopOf="@+id/horizontal25"
        app:layout_constraintEnd_toStartOf="@+id/vertical90"
        app:layout_constraintStart_toStartOf="@+id/vertical10"
        app:layout_constraintTop_toTopOf="@+id/horizontal25" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmailField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeColor="@color/text_input_stroke_color"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="custom"
        app:errorTextColor="@color/red"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@id/vertical90"
        app:layout_constraintStart_toStartOf="@id/vertical10"
        app:layout_constraintTop_toBottomOf="@+id/loginErrorMessage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM@."
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:maxHeight="60dp"
            android:maxLength="50"
            android:maxLines="1"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeColor="@color/text_input_stroke_color"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:errorTextColor="@color/red"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/vertical90"
        app:layout_constraintStart_toStartOf="@+id/vertical10"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:maxHeight="60dp"
            android:textColor="@color/black"
            android:maxLength="50"
            android:maxLines="1"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center"
        android:minHeight="60dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toStartOf="@+id/vertical85"
        app:layout_constraintStart_toStartOf="@+id/vertical15"
        app:layout_constraintTop_toBottomOf="@+id/loginCheckBox"
        app:textAllCaps="false" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <CheckBox
        android:id="@+id/loginCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:textColor="@color/black"
        android:buttonTint="@color/colorPrimary"
        android:maxLines="2"
        android:text="@string/remember_me"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/forget_password_text"
        app:layout_constraintEnd_toStartOf="@+id/vertical50"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vertical10" />

    <TextView
        android:id="@+id/forget_password_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:ellipsize="marquee"
        android:focusable="true"
        android:gravity="end"
        android:maxLines="2"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textDirection="locale"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/vertical90"
        app:layout_constraintStart_toEndOf="@+id/loginCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordField" />


    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/dont_have_account_sign_up"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.15"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical85"
        app:layout_constraintStart_toStartOf="@+id/vertical15"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_text"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>