<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/successfulConstraintLayout"
    android:background="@color/background"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordResetLayoutDialog"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_bkg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/passwordResetSuccessTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:paddingTop="28dp"
            android:text="@string/verification_complete"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/passwordResetLayoutDialog" />

        <TextView
            android:id="@+id/passwordResetSuccessDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:ellipsize="marquee"
            android:gravity="center_horizontal"
            android:maxLines="4"
            android:text="@string/email_verified_successfully_proceed_to_reset_your_password"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordResetSuccessTitle"
            app:layout_constraintVertical_bias="0.06" />

        <Button
            android:id="@+id/verifyDialogButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/continue_"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="14sp"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/passwordResetSuccessDesc"
            app:layout_constraintStart_toStartOf="@+id/passwordResetSuccessDesc"
            app:layout_constraintTop_toBottomOf="@+id/passwordResetSuccessDesc" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/successImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/ready"
        app:layout_constraintBottom_toTopOf="@id/passwordResetLayoutDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/passwordResetLayoutDialog" />


</androidx.constraintlayout.widget.ConstraintLayout>